Generate map definitions and constructors